<resources>

    <!-- App-Wide Strings -->
    <string name="app_name">Infection Protection</string>
    <string name="company_logo">Action Bar Company Logo</string>

    <string name="hospital_name">Keck Medicine</string>

    <!-- CUSTOM VIEWS -->
    <!-- Custom Alert Dialog -->
    <string name="default_alert_dialog_title">Alert!</string>
    <string name="default_alert_dialog_message">Alert Dialog Message</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <!-- Custom Spinner -->
    <string name="default_spinner_message">Loading in Data!</string>

    <!-- Shortcuts -->
    <string name="create_new_report_shortcut_short_label">Create New Report</string>
    <string name="create_new_report_shortcut_longs_label">Create New Observation Report</string>

    <!-- Main Activity -->
    <string name="main_alert_dialog_title">Connection Issue!</string>
    <string name="main_alert_dialog_message">Issue retrieving new precaution list. Possible internet connection problem</string>
    <string name="precautions_sorry_message">"Sorry! We're having trouble finding the precautions at the moment!"</string>
    <!-- Below uses a placeholder (%1$ w/ an 's' for a string) injected as the second arg of getString -->
    <string name="create_report_header">Create a New %1$s Report</string>
    <string name="slide_forward_hint">Slide Right</string>
    <string name="slide_backward_hint">Slide Left</string>
    <string name="health_practice_button_desc">Create New Health Practice Report</string>

    <!-- Nav Drawer Strings -->
    <string name="nav_header_img">USC Shield Nav Header Logo</string>
    <string name="close_nav_drawer_button_desc">Close Nav Drawer</string>
    <string name="reports">Recent Reports</string>
    <string name="report_filters">Recent Reports by Filter</string>
    <string name="standard_precautions">Standard Precaution</string>
    <string name="isolation_precautions">Isolation Precaution</string>

    <!-- Settings Activity String -->
    <string name="settings_label">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="default_preferences_title">Preference Title</string>
    <string name="default_preferences_summary">Preference Description</string>
    <string name="settings_editText_dialog_header_image_desc">USC Shield Logo</string>
    <string name="settings_editText_dialog_preference_name_title">Preference Name</string>
    
    <!-- General User Settings Activities w/ Keys -->
    <string name="settings_personal_info">Personal Info</string>
    <string name="settings_personal_key">user_category</string>

    <string name="settings_username">Username</string>
    <string name="settings_user_key">username</string>

    <string name="settings_department">Department</string>
    <string name="settings_department_key">department</string>

    <string name="settings_id">Employee ID</string>
    <string name="settings_id_key">id</string>

    <string name="settings_phone_number">Phone Number</string>
    <string name="settings_phone_key">phone</string>

    <string name="settings_password">Password</string>
    <string name="settings_password_key">password</string>

    <!-- Settings admin strings and keys -->
    <string name="settings_admin">Admin Settings</string>
    <string name="settings_admin_key">admin</string>

    <string name="settings_toolbar_color">Toolbar Color</string>
    <string name="settings_toolbar_color_key">toolbar_color</string>

    <string name="settings_background_color">Background Color</string>
    <string name="settings_background_color_key">background_color</string>

    <string name="settings_report_title_color">Report Title Color</string>
    <string name="settings_report_title_color_key">report_title_color</string>

    <string name="settings_background_image_switch">Background Image</string>
    <string name="settings_background_image_key">background_image</string>

    <string name="settings_hospital_group">Hospital Group</string>
    <string name="settings_hospital_group_key">hospital_group_key</string>
    
    
    <!-- Create a New Report Fragment Strings -->
    <string name="create_new_report_label">Create New Report</string>
    <string name="date_edittext_hint">Time &amp; Date</string>
    <string name="missing_date_hint">Tap the Time &amp; Date text box above to set them up!</string>
    <string name="default_create_report_header">New Observation</string>
    <string name="create_report_date">Date of Observation</string>
    <string name="create_report_employee_spinner_label">Select an Employee</string>
    <string name="create_report_employee_spinner_description">Employee Dropdown Menu</string>
    <string name="create_report_health_practice_spinner_label">Select a Health Practice</string>
    <string name="create_report_health_practice_spinner_description">Health Practice Dropdown Menu</string>
    <string name="create_report_facility_location_spinner_label">Occurrence Location</string>
    <string name="create_report_facility_location_spinner_description">Occurrence Location Dropdown Menu</string>
    <string name="create_report_assignments_button"><u>See your assignments</u></string>
    <string name="create_report_button">Submit</string>
    <string name="date_alert_dialog_title">Date Left Empty!</string>
    <string name="date_alert_dialog_message">"You haven't filled in a date. Would you like to use the current time for the report date?"</string>
    <!-- Following 2 may be useful in future but are temporary placeholders in the interim -->
    <string name="create_report_my_team">My Team: </string>
    <string name="create_report_location_prompt">Select a Facility, Unit and Room Number</string>

    <!-- Reports List Activity -->
    <string name="reports_filter_button">Sort &amp; Filter</string>
    <string name="sorting_and_filtering_message">Sorting and Filtering Now!</string>
    <string name="filter_desc">Sorting and Filtering</string>
    <string name="default_report_item_title">Violation Type</string>
    <string name="default_report_item_date">10:24pm 10/12/2019</string>
    <string name="default_report_item_employee_name">Committed by Nicholas Caceres</string>
    <string name="default_report_item_location">Location: USC Unit 1 Room 123</string>
    <string name="report_icon_desc">Report icon</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search by name, health practice, id, or more!</string>
    <string name="report_list_alert_dialog_message">Issue retrieving report list. Possible internet connection problem</string>
    <string name="reports_sorry_message">"Sorry! Couldn't Retrieve the Reports"</string>

    <!-- Sort Filter Menu -->
    <string name="set_filter_menu_label">Done</string>
    <string name="reset_filter_menu_label">Reset Filters</string>
    <string name="remove_filter_button">Remove Filter</string>
    <string name="default_filter_name">Filter Name</string>
</resources>
