<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_personal_info"
        android:layout="@layout/preferences_category"
        android:key="@string/settings_personal_key" >

        <Preference
            android:title="@string/settings_username"
            android:summary=""
            android:key="@string/settings_user_key"
            android:layout="@layout/preference_divided" />

        <Preference
            android:title="@string/settings_department"
            android:summary=""
            android:key="@string/settings_department_key"
            android:layout="@layout/preference_divided" />

        <Preference
            android:title="@string/settings_id"
            android:summary=""
            android:key="@string/settings_id_key"
            android:layout="@layout/preference_divided" />

        <EditTextPreference
            android:title="@string/settings_phone_number"
            android:summary=""
            android:key="@string/settings_phone_key"
            android:layout="@layout/preference_divided" />

        <EditTextPreference
            android:title="@string/settings_password"
            android:summary=""
            android:key="@string/settings_password_key"
            android:layout="@layout/preference_main" />
    </PreferenceCategory>

</PreferenceScreen>