<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:title="@string/reports"
            android:id="@+id/reportListFragment"
            android:icon="@drawable/ic_description"/>
    </group>

    <item android:title="@string/report_filters">
        <menu>
            <item
                android:id="@id/actionToReportListFragmentWithStandardFilter"
                android:title="@string/standard_precautions"
                android:icon="@drawable/ic_collections_bookmark" />
            <item
                android:id="@id/actionToReportListFragmentWithIsolationFilter"
                android:title="@string/isolation_precautions"
                android:icon="@drawable/ic_collections_bookmark" />
        </menu>
    </item>
</menu>