<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/appBackground" >

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/headerView"
      android:background="@color/colorPrimary"
      android:paddingVertical="10dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@android:id/title"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/alertIcon"
        android:src="@drawable/usc_shield_mono_gold"
        android:contentDescription="@string/settings_editText_dialog_header_image_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="spread" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <TextView
      android:id="@android:id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="24sp"
      android:textColor="@color/colorPrimaryDark"
      android:textStyle="bold"
      android:text="@string/settings_editText_dialog_preference_name_title"
      android:labelFor="@android:id/edit"
      android:layout_marginStart="18dp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintTop_toBottomOf="@id/headerView"
      app:layout_constraintBottom_toTopOf="@android:id/edit"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@android:id/edit"
      android:layout_width="0dp"
      android:layout_height="50dp"
      android:layout_marginStart="22dp"
      android:layout_marginEnd="14dp"
      android:layout_marginTop="10dp"
      android:textColorHint="@color/textHintColor"
      android:backgroundTint="@color/colorPrimaryDark"
      android:textSize="20sp"
      android:importantForAutofill="no"
      android:inputType="text"
      app:layout_constraintTop_toBottomOf="@android:id/title"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <Button
      android:id="@+id/alertCancelButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/colorLight"
      android:paddingHorizontal="30dp"
      android:text="@string/alert_dialog_cancel"
      android:textSize="20sp"
      android:textColor="@color/colorPrimaryDark"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/alertOkButton"
      app:layout_constraintTop_toTopOf="@+id/alertOkButton"
      app:layout_constrainedWidth="true"
      app:layout_constraintWidth_min="130dp" />

  <Button
      android:id="@+id/alertOkButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/colorLight"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="14dp"
      android:paddingHorizontal="40dp"
      android:text="@string/alert_dialog_ok"
      android:textSize="20sp"
      android:textColor="@color/colorPrimaryDark"
      app:layout_constraintStart_toEndOf="@id/alertCancelButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@android:id/edit"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constrainedWidth="true"
      app:layout_constraintWidth_min="130dp" />

</androidx.constraintlayout.widget.ConstraintLayout>